# wechat-allauto-gzh

./: README.md  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  skill.md
src/: App.tsx
src/skills/: content_optimizer.py  html_optimizer.py  markdown_to_wechat_converter.py  openclaw_compat.py  wechat_capability_skill.py  wechat_formatter_skill.py
src/utils/: WeChatHTMLConverter.ts  themeLoader.ts
